# PicFilters

./: CMakeLists.txt  LINFIL.c  LINFIL.h  LUT.c  LUT.h  M.G24  NLFIL.c  NLFIL.h  main.c  pic.c  pic.h
